# rust-actix-demo

./: .env.example  .gitignore  Cargo.toml
migrations/2020-09-04-095514_create_users/: up.sql
src/: config.rs  main.rs
src/core/: auth.rs  cache.rs  mod.rs  server.rs  validate.rs
src/helper/: mod.rs  respond.rs
src/middleware/: auth.rs
src/module/: auth.rs  health.rs  mod.rs  route.rs
src/module/user/: extractor.rs  handler.rs  mod.rs  model.rs
